--- a/app/src/main/res/layout/activity_final_exchange.xml
+++ b/app/src/main/res/layout/activity_final_exchange.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VehicleDetails"
+    tools:context=".finalExchangeActivity"
     android:background="@color/backgroundColor">
 
     <RelativeLayout
@@ -33,8 +33,9 @@
                 android:layout_below="@+id/logo"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
-                android:text=" Enter Vehicle Details"
+                android:text=" Final Check"
                 android:textSize="40sp"
+                android:textAlignment="center"
                 android:textColor="@color/white"/>
 
         </RelativeLayout>
@@ -47,106 +48,155 @@
             android:layout_below="@+id/relative1">
 
             <TextView
-                android:id="@+id/vehicleMakeTv"
+                android:id="@+id/firstName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:text="  Vehicle Make"
+                android:text="  1"
                 android:textSize="25sp"
-                android:textColor="@color/white"/>
-
-            <EditText
-                android:id="@+id/vehicleMake"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/vehicleMakeTv"
-                android:paddingTop="10dp"
-                android:hint="  Type Something"
-                android:textColorHint="@color/white"
                 android:textColor="@color/white"/>
 
             <TextView
-                android:id="@+id/VehicleYearTv"
+                android:id="@+id/lastName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/vehicleMake"
+                android:layout_below="@+id/firstName"
                 android:layout_marginTop="50dp"
-                android:text="  Vehicle Year"
+                android:text="  2"
                 android:textSize="25sp"
                 android:textColor="@color/white"/>
-
-            <EditText
-                android:id="@+id/VehicleYear"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/VehicleYearTv"
-                android:paddingTop="10dp"
-                android:hint="  Type Something"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white"/>
-
 
             <TextView
-                android:id="@+id/plateNoTv"
+                android:id="@+id/DOB"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/VehicleYear"
+                android:layout_below="@+id/lastName"
                 android:layout_marginTop="50dp"
-                android:text="  Plate Number"
+                android:text="  3"
                 android:textSize="25sp"
                 android:textColor="@color/white"/>
-
-            <EditText
-                android:id="@+id/plateNo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/plateNoTv"
-                android:paddingTop="10dp"
-                android:hint="  Type Something"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white"/>
-
 
             <TextView
-                android:id="@+id/stateTv"
+                android:id="@+id/Address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/plateNo"
+                android:layout_below="@+id/DOB"
                 android:layout_marginTop="50dp"
-                android:text="  State"
+                android:text="  4"
                 android:textSize="25sp"
                 android:textColor="@color/white"/>
 
-            <EditText
-                android:id="@+id/state"
+            <TextView
+                android:id="@+id/license"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/stateTv"
-                android:paddingTop="10dp"
-                android:hint="  Type Something"
-                android:textColorHint="@color/white"
+                android:layout_below="@+id/Address"
+                android:layout_marginTop="50dp"
+                android:text="  5"
+                android:textSize="25sp"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/insProvider"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/license"
+                android:layout_marginTop="50dp"
+                android:text="  6"
+                android:textSize="25sp"
                 android:textColor="@color/white"/>
 
 
             <TextView
-                android:id="@+id/vehicleTypeTv"
+                android:id="@+id/insPolicyNum"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/state"
+                android:layout_below="@+id/insProvider"
                 android:layout_marginTop="50dp"
-                android:text="  Vehicle Type"
+                android:text="  7"
+                android:textSize="25sp"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/insPolicyHolder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/insPolicyNum"
+                android:layout_marginTop="50dp"
+                android:text="  8"
+                android:textSize="25sp"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/Make"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/insPolicyHolder"
+                android:layout_marginTop="50dp"
+                android:text="  9"
+                android:textSize="25sp"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/Year"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Make"
+                android:layout_marginTop="50dp"
+                android:text="  10"
+                android:textSize="25sp"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/Plate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Year"
+                android:layout_marginTop="50dp"
+                android:text="  11"
+                android:textSize="25sp"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/vehicleState"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Plate"
+                android:layout_marginTop="50dp"
+                android:text="  12"
+                android:textSize="25sp"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/Type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/vehicleState"
+                android:layout_marginTop="50dp"
+                android:text="  13"
+                android:textSize="25sp"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/reportNameTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_marginTop="50dp"
+                android:text="  Enter Report Name"
                 android:textSize="25sp"
                 android:textColor="@color/white"/>
 
             <EditText
-                android:id="@+id/vehicleType"
+                android:id="@+id/ReportName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/vehicleTypeTv"
+                android:layout_below="@+id/reportNameTv"
                 android:paddingTop="10dp"
-                android:hint="  Type Something"
+                android:hint="  Type Name"
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"/>
+
 
         </RelativeLayout>
 
@@ -156,7 +206,7 @@
             android:layout_below="@+id/relative2">
 
             <Button
-                android:id="@+id/toMaps"
+                android:id="@+id/submitInfoToFirebase"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_marginLeft="50dp"
