--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -51,53 +51,40 @@
         app:layout_constraintRight_toRightOf="parent"/>
 
     <Button
-        android:id="@+id/camera"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:text="Camera"
-        android:onClick="onClick"
-        android:backgroundTint="@color/logo"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="40dp"
-        app:layout_constraintTop_toBottomOf="@id/step_by_step"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <Button
         android:id="@+id/handbook"
         android:layout_width="140dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="40dp"
         android:backgroundTint="@color/logo"
         android:onClick="onClick"
         android:text="Handbook"
-        app:layout_constraintBaseline_toBaselineOf="@id/camera"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/camera"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/step_by_step" />
 
     <Button
         android:id="@+id/info_exchange"
         android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:text="Information\n Exchange"
-        android:onClick="onClick"
+        android:layout_height="60dp"
+        android:layout_marginTop="15dp"
         android:backgroundTint="@color/logo"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="40dp"
-        app:layout_constraintTop_toBottomOf="@id/camera"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:onClick="onClick"
+        android:text="Information\n Exchange"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/handbook" />
 
     <Button
         android:id="@+id/reports"
         android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:text="Reports"
-        android:onClick="onClick"
+        android:layout_height="60dp"
+        android:layout_marginTop="15dp"
         android:backgroundTint="@color/logo"
-        android:layout_marginEnd="40dp"
-        app:layout_constraintTop_toBottomOf="@id/handbook"
-        app:layout_constraintBaseline_toBaselineOf="@id/info_exchange"
-        app:layout_constraintRight_toRightOf="parent"/>
+        android:onClick="onClick"
+        android:text="Reports"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/info_exchange" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
